# receptor

./: .dockerignore  .gitignore  .gitleaks.toml  .golangci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .sonarcloud.properties  .testfile  Makefile  README.md  VERSION  go.mod  go.sum  setup.cfg  sockceptor.go  sonar-project.properties  test.sh  todo.txt
.github/: codecov.yml  dependabot.yml  issue_labeler.yml
.github/workflows/: artifact-k8s-logs.sh  automerge.yml  build.yml  build_binary_from_ref.yml  build_container_from_ref.yml  codeql-analysis.yml  coverage_reporting.yml  daily.yml  dependency_review.yml  devel_image.yml  devel_whl.yml  main.yml  promote.yml  pull_request.yml  rebuild-image.sh  receptorctl.yml  reusable-nox.yml  reusable_receptorctl_checks.yml  reusable_receptorctl_tests.yml  scorecard.yml  sonarqube.yml  stage.yml  test-reporting.yml  triage_new.yml
cmd/: certificates.go  config.go  defaults.go  recepcert.go  receptor.go  root.go
cmd/cmd/: backends.go  cert.go  resources.go  root.go  services.go  workers.go
cmd/receptor-cb/: main.go  serve.go  tls-ca.go  tls-req.go  tls-sign.go  tls.go
cmd/receptor-cl/: receptor.go
docs/: Makefile  requirements.txt
docs/diagrams/: AddListenerBackend.md  Main.md  Netceptor.md
docs/source/: conf.py  connecting_nodes.rst  contributing.rst  developer_guide.rst  edge_networks.rst  firewall.rst  index.rst  installation.rst  interacting_with_nodes.rst  k8s.rst  release_process.rst  requirements.txt  tls.rst  workceptor.rst
example/: example.go  net.go
internal/version/: version.go
packaging/ci-image/: Dockerfile  entrypoint.sh
packaging/container/: .gitignore  Dockerfile  receptor.conf  receptor.repo  receptor.yaml
packaging/goreleaser/: goreleaser.yml
packaging/rpm/: .gitignore  postinstall.sh  postremove.sh  preinstall.sh  receptor-python-worker.spec.j2  receptor.conf.example  receptor.service  receptor.spec.j2  receptor@.service  receptorctl.spec.j2  topdir.macro
packaging/rpm-builder/: Dockerfile  buildrpms.sh  rpmmacros
packaging/tc-image/: Dockerfile
pkg/: pkg.go
pkg/backends/: backends.go  cmdline.go  null.go  null_test.go  tcp.go  tcp_test.go  udp.go  udp_test.go  utils.go  utils_test.go  websocket_interop_test.go  websockets.go  websockets_test.go
pkg/certificates/: ca.go  ca_test.go  cli.go  cli_test.go  cmdline.go
pkg/cmdline/: cmdline.go
pkg/controlsock/: controlsock.go
pkg/controlsvc/: connect.go  connect_test.go  controlsvc.go  controlsvc_stub.go  controlsvc_test.go  info.go  interfaces.go  ping.go  ping_test.go  purge.go  reload.go  reload_test.go  status.go  status_test.go  traceroute.go  traceroute_test.go
pkg/debug/: debug.go
pkg/framer/: framer.go  framer_test.go
pkg/logger/: logger.go  logger_test.go
pkg/netceptor/: addr.go  addr_test.go  backend_udp.go  conn.go  external_backend.go  firewall_rules.go  firewall_rules_test.go  hopcount_test.go  inmem.go  netceptor.go  netceptor_test.go  packetconn.go  packetconn_test.go  ping.go  ping_test.go  tlsconfig.go  tlsconfig_test.go
pkg/randstr/: randstr.go  randstr_test.go
pkg/services/: cmdline.go  command.go  ip_router.go  ip_router_cfg.go  services.go  tcp_proxy.go  tun_proxy.go  tun_proxy_stub.go  udp_proxy.go  unix_proxy.go
pkg/sockutils/: bridge.go  flock.go  flock_windows.go  unixsock.go  unixsock_windows.go
pkg/tickrunner/: tickrunner.go
pkg/tls/: tls.go
pkg/types/: main.go
pkg/utils/: bridge.go  bridge_test.go  broker.go  cancel_with_err_context.go  change_duration.go  common.go  common_test.go  error_kind.go  error_kind_test.go  flock.go  flock_test.go  flock_windows.go  increment_duration.go  incremental_duration.go  incremental_duration_test.go  job_context.go  job_context_test.go  misc.go  other_name.go  other_name_test.go  randstr.go  readstring_context.go  readstring_timeout.go  sysinfo.go  sysinfo_test.go  unixsock.go  unixsock_test.go  unixsock_windows.go
pkg/version/: version.go
pkg/workceptor/: cmdline.go  command.go  command_detach_unixlike.go  command_detach_windows.go  command_test.go  controlsvc.go  controlsvc_test.go  interfaces.go  json_test.go  kubernetes.go  kubernetes_test.go  lock_test.go  python.go  (+9 more)
receptor-python-worker/: .coveragerc  .gitignore  README.md  noxfile.py  pyproject.toml  setup.cfg  setup.py
receptor-python-worker/receptor_python_worker/: __init__.py  __main__.py  plugin_utils.py  work.py
receptor-python-worker/requirements/: lint.in  lint.txt  pip-tools.in  pip-tools.txt  tests.in  tests.txt
receptor-python-worker/test/: status  stdin  stdout
receptor-python-worker/tests/: test_receptor_python_worker.py
receptorctl/: .coveragerc  .gitignore  MANIFEST.in  README.md  build-requirements.txt  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
receptorctl/receptorctl/: __init__.py  __main__.py  cli.py  socket_interface.py
receptorctl/requirements/: lint.in  lint.txt  pip-tools.in  pip-tools.txt  tests.in  tests.txt
receptorctl/tests/: README.md  __init__.py  conftest.py  lib.py  test_cli.py  test_connection.py  test_mesh.py  test_workunit.py  tests.py
receptorctl/tests/mesh-definitions/access_control/: node1.yaml  node2.yaml  node3.yaml
receptorctl/tests/mesh-definitions/mesh1/: node1.yaml  node2.yaml  node3.yaml
tests/: .gitignore  Makefile  README.md  receptor-tester.sh
tools/: README.md  combinelogs.py
(+143 files in other folders)
