[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {email = "info@ansible.com"},
]
description = "The receptor-python-worker command is called by Receptor to supervise the operation of a Python worker plugin."
dynamic = [
    "dependencies",
    "scripts",
    "version"
]
name = "receptor-python-worker"

[project.optional-dependencies]
dev = [
    "nox",
]
