[metadata]
name = receptor-python-worker
author = Red Hat
author-email = info@ansible.com
summary = "The receptor-python-worker command is called by Receptor to supervise the operation of a Python worker plugin."
home-page = https://github.com/ansible/receptor/tree/devel/receptor-python-worker
description-file = README.md
description-content-type = text/markdown

[entry_points]
console_scripts =
    eceptor-python-worker = receptor_python_worker:run

[files]
packages =
    receptor-python-worker
