[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {email = "info@ansible.com"},
]
description = "Receptorctl is a front-end CLI and importable Python library that interacts with Receptor over its control socket interface."
dynamic = [
    "dependencies",
    "scripts",
    "version"
]
license = {text = "Apache License 2.0"}
name = "receptorctl"

[project.optional-dependencies]
dev = [
    "nox",
]

[tool.black]
exclude = "(build|.eggs)"
