[metadata]
name = receptorctl
author = Red Hat
author-email = info@ansible.com
summary = "Receptorctl is a front-end CLI and importable Python library that interacts with Receptor over its control socket interface."
home-page = https://github.com/project-receptor/receptor/tree/devel/receptorctl
description-file = README.md
description-content-type = text/markdown

[entry_points]
console_scripts =
    receptorctl = receptorctl:run

[files]
packages =
    receptorctl
