[metadata]
name = receptorctl
author = Red Hat
author_email = info@ansible.com
summary = "Receptorctl is a front-end CLI and importable Python library that interacts with Receptor over its control socket interface."
home_page = https://receptor.readthedocs.io
description_file = README.md
description_content_type = text/markdown

[entry_points]
console_scripts =
    receptorctl = receptorctl:run

[files]
packages =
    receptorctl
