[metadata]
name = receptorctl
author = Red Hat
author_email = info@ansible.com
summary = "Receptorctl is a front-end CLI and importable Python library that interacts with Receptor over its control socket interface."
home_page = https://ansible.readthedocs.io/projects/receptor/
description_file = README.md
description_content_type = text/markdown
license = "Apache License 2.0"
version = file: .VERSION

[options]
packages = find:
install_requires =
    python-dateutil
    click
    pyyaml

[options.entry_points]
console_scripts =
    receptorctl = receptorctl:run

[files]
packages =
    receptorctl

[flake8]
max-line-length = 100
